[package]
name = "parside"
version = "0.1.3"
edition = "2021"
description = "Parser for Composable Event Streaming Representation (CESR)"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cesride = { version = "0.1.3", path = "../cesride" }
cesride = "0.1.3"
indexmap = "1.9.2"
serde_json = { version = "1.0.91", features = ["preserve_order"] }
thiserror = "1.0.38"
